--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mermaid": "^11.12.2",
     "next": "16.0.7",
     "openai": "^6.10.0",
+    "pdf-parse": "^2.4.5",
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
